fix: video overflow in stage

--- a/packages/styling/src/Stage.scss
+++ b/packages/styling/src/Stage.scss
@@ -65,17 +65,22 @@
     display: flex;
     flex-direction: column;
 
-    .str-video__remote-video {
-      border-radius: 12px;
-      border: 2px solid transparent;
-      background-size: contain;
-      width: 100%;
+    .str-video__video-container {
+      min-height: 0;
+      display: flex;
+      flex-direction: column;
 
-      &.mirror {
-        transform: rotateY(180deg);
+      .str-video__remote-video {
+        border-radius: 12px;
+        border: 2px solid transparent;
+        background-size: contain;
+        width: 100%;
+
+        &.mirror {
+          transform: rotateY(180deg);
+        }
       }
     }
-
     &.str-video__participant--speaking {
       .str-video__remote-video {
         border: 2px solid #005fff;
